--- a/src/scripts/README
+++ b/src/scripts/README
@@ -1,14 +1,19 @@
-This directory holds test scripts useful for MagLev.
+This directory holds test scripts useful for MagLev. It's a bit of a kluge
+meant for internal use. We're providing it in case you want a shortcut for
+comparative testing.
 
 ===================================================
 
 1) Scripts to run ruby-benchmark-suite tests
-  run_benchmarks-MagLev.rb  
-  run_benchmarks-MRI.rb
+  runAllBenchmarks.sh
+  run_benchmarks-*.rb
 
-The above scripts invoke other ruby scripts in ../benchmark/cangiano that are versions
-of the bm_*.rb files from Antonio Cangiano's ruby-benchmark-suite which have
-been modified to produce timing and status information as shown below:
+You may need to adjust the commands in runAllBenchmarks.sh to reflect
+the proper location of your ruby executables.
+
+The above scripts invoke other ruby scripts in ../benchmark/cangiano that are
+versions of the bm_*.rb files from Antonio Cangiano's ruby-benchmark-suite
+modified to produce timing and status information as shown below:
 
 ==> Start benchmark: ./core-features/bm_app_answer.rb
              user     system      total        real
@@ -17,14 +22,17 @@ been modified to produce timing and status information as shown below:
 ==> End benchmark: ./core-features/bm_app_answer.rb
 
 Suggested usage:
-  nohup ruby ./run_benchmarks-MRI.rb 1>benchmark_results-MRI-${HOSTNAME}-`date +%y%m%d`.out 2>&1 &
+  bash -v runAllBenchmarks.sh
+  This will produce a .csv file containing timing for all implementations run
 
-  nohup maglev-ruby ./run_benchmarks-MagLev.rb 1>benchmark_results-Maglev-${HOSTNAME}-`date +%y%m%d`.out 2>&1 &
+Or for single tests:
+  ruby ./run_benchmarks-MRI-186p287.rb 1>benchmark_results-MRI.out 2>&1
+  maglev-ruby ./run_benchmarks-MagLev.rb 1>benchmark_results-Maglev.out 2>&1
 
 You can run these without redirecting output if you want to watch a live run.
 
-NOTE: At present the benchmarks require the following files to be in the directory
-from which the scripts are run. These are links to the ../benchmarks hierarchy.
+NOTE: At present the benchmarks require these files to be in the directory
+from which the scripts are run. They are links to the ../benchmarks hierarchy.
   fasta.input
   hilbert.rb
   random.input
