Ramaze: Bug 352 is fixed, so back out fiber workaround

--- a/src/external/README
+++ b/src/external/README
@@ -39,8 +39,7 @@ ramaze_hello.rb
 
   Gemstone has made the following changes to the ramaze code:
   * lib/ramaze/reloader.rb: Commented out the test for RInotify gem, and
-    force use of File.stat
-  * Commented out fiber.rb guts (uncomment when Trac #352 is fixed).
+    force use of File.stat.  MagLev does not currently support rubygem.
   * Thread.abort_on_exception= is a stub, so...watch out.
 
 rubygems-1.3.1
