--- a/src/external/README
+++ b/src/external/README
@@ -52,6 +52,9 @@ ramaze_hello.rb
 rubygems-1.3.1
   Ruby gems 1.3.1.  We're working on getting it to run.
 
+  !!! NOTE !!!: Gemstone has made the following changes to the code:
+  * rubygems-1.3.1/lib/rubygems/source_index.rb: Work around Trac 370
+
 rxtest
   Tim Bray's rx code.  Rx is an automaton based XML tokenizer.  It was
   proposed as one of the real-world-ish applications to add to Antonio's
