--- a/docs/release_notes
+++ b/docs/release_notes
@@ -1,4 +1,4 @@
-== Release Notes for the MagLev Alpha release of December 19, 2008.
+== Release Notes for the MagLev Alpha release of March 29, 2009
 
 === ParseTree
 This version requires Ruby 1.8.6 patchlevel 287 due to an incompatibility
