--- a/README.rdoc
+++ b/README.rdoc
@@ -77,6 +77,8 @@ You should now be able to run a simple ruby script:
 
 === <tt>maglev-irb</tt>: Open an interactive maglev shell
 
+MagLev now includes a slightly modified copy of irb called maglev-irb. References in this documentation to maglev-irb currently apply to the deprecated maglev-irb version, temporarily renamed topaz-irb. We'll update the docs soon.
+
 MagLev provides an IRB-like utility, <tt>$MAGLEV_HOME/bin/maglev-irb</tt>.
 It provides a minimal interactive environment with some limitations:
 
