--- a/THANKS
+++ b/THANKS
@@ -3,7 +3,7 @@ reported and sometimes fixed bugs, and helped in many other ways, including:.
 
 - Avi Bryant, for a lot of inspiration and hard work from day one.
 - Markus Roberts, for lots of feedback, bugfixes, and porting irb and zaml to MagLev.
-- Michael Latta, for getting the MySQL driver and ruby_parser working under MagLev, 
+- Michael Latta, for getting the MySQL driver and some of Rails working under MagLev, 
   and his valuable feedback and bugfixes while suffering through earliest Alphas
 - Danie Roux and Otto Behrens, for providing rake scripts to manage multiple
   MagLev systems on a single computer.
