--- a/THANKS
+++ b/THANKS
@@ -1,9 +1,14 @@
-Many thanks to the MagLev Alpha testers who have contributed code and design ideas,
-reported and sometimes fixed bugs, and helped in many other ways, including:.
+Many thanks to the MagLev Alpha testers who have contributed code and design
+ideas, reported and sometimes fixed bugs, and helped in many other ways,
+including:
 
 - Avi Bryant, for a lot of inspiration and hard work from day one.
-- Markus Roberts, for lots of feedback, bugfixes, and porting irb and zaml to MagLev.
-- Michael Latta, for getting the MySQL driver and some of Rails working under MagLev, 
-  and his valuable feedback and bugfixes while suffering through earliest Alphas
+- Markus Roberts, for lots of feedback, bugfixes, and porting irb and zaml
+  to MagLev.
+- Michael Latta, for getting the MySQL driver and some of Rails working 
+  under MagLev, and his valuable feedback and bugfixes while suffering
+  through earliest Alphas
 - Danie Roux and Otto Behrens, for providing rake scripts to manage multiple
   MagLev systems on a single computer.
+- Ryan Davis for his implementation of ruby_parser2.0.2, which was the
+  starting point for the parser implemented in the MagRp module.
