--- a/spec/tags/frozen/language/precedence_tags.txt
+++ b/spec/tags/frozen/language/precedence_tags.txt
@@ -1,3 +1,5 @@
 fails:Operators ! ~ + have a higher precedence than **
 fails:Operators + - are left-associative
 fails:Operators <=> == === != =~ !~ have higher precedence than &&
+breaks:Operators <=> == === != =~ !~ are non-associative
+breaks:Operators .. ... are non-associative
