--- a/spec/tags/frozen/language/break_tags.txt
+++ b/spec/tags/frozen/language/break_tags.txt
@@ -1,2 +1,11 @@
 fails:Breaking out of a loop with a value assigns splatted objects to a splatted reference from a splatted loop
 fails:Breaking out of a loop with a value stops any loop type at the correct spot
+breaks:The break statement ends block execution if used whithin block
+breaks:The break statement causes block to return value passed to break
+breaks:The break statement causes block to return nil if an empty expression passed to break
+breaks:The break statement causes block to return nil if no value passed to break
+breaks:Executing break from within a block returns from the invoking singleton method
+breaks:Executing break from within a block returns from the invoking method with the argument to break
+breaks:Executing break from within a block returns from the original invoking method even in case of chained calls
+breaks:Breaking out of a loop with a value stops a yielded method at the correct spot
+breaks:The break statement raises a LocalJumpError if used not within block or while/for loop
