--- a/spec/tags/frozen/language/def_tags.txt
+++ b/spec/tags/frozen/language/def_tags.txt
@@ -11,3 +11,4 @@ fails:a method definition that sets more than one default parameter all to the s
 fails:a method definition that sets more than one default parameter all to the same value assigns the parameters different objects across different default calls
 fails:a method definition that sets more than one default parameter all to the same value only allows overriding the default value of the first such parameter in each set
 fails:a method definition that sets more than one default parameter all to the same value treats the argument after the multi-parameter normally
+breaks:An instance method definition with a splat allows only a single * argument
