--- a/spec/tags/frozen/language/break_tags.txt
+++ b/spec/tags/frozen/language/break_tags.txt
@@ -8,3 +8,4 @@ breaks:Executing break from within a block returns from the invoking method with
 breaks:Executing break from within a block returns from the original invoking method even in case of chained calls
 breaks:Breaking out of a loop with a value stops a yielded method at the correct spot
 breaks:The break statement raises a LocalJumpError if used not within block or while/for loop
+fails:Breaking out of a loop with a value assigns splatted objects to a splatted reference from a splatted loop
