--- a/spec/tags/frozen/language/next_tags.txt
+++ b/spec/tags/frozen/language/next_tags.txt
@@ -1,1 +1,2 @@
 breaks:The next statement raises a LocalJumpError if used not within block or while/for loop
+fails:Assignment via next assigns splatted objects to a splatted reference via a splatted yield
