--- a/spec/tags/frozen/language/private_tags.txt
+++ b/spec/tags/frozen/language/private_tags.txt
@@ -1,2 +1,3 @@
 fails:The private keyword is overridden when a new class is opened
 fails:The private keyword changes the visibility of the existing method in the subclass
+fails:The private keyword marks following methods as being private
