--- a/spec/tags/frozen/language/throw_tags.txt
+++ b/spec/tags/frozen/language/throw_tags.txt
@@ -1,2 +1,4 @@
-breaks:The throw keyword raises a name error if outside of scope of a matching catch
+# breaks:The throw keyword raises a name error if outside of scope of a matching catch
+breaks:The throw keyword raises a NameError if outside of scope of a matching catch
 fails:The throw keyword only allows symbols and strings as it's argument
+fails:The throw keyword only allows symbols and strings as its argument
