--- a/src/external/README
+++ b/src/external/README
@@ -37,6 +37,7 @@ rubygems-1.3.5
   * rubygems-1.3.5/lib/rubygems/dependency_installer.rb
   * rubygems-1.3.5/lib/rubygems/package/tar_input.rb
   See docs/applications for details
+  Next step:   maglev-ruby -Ilib -Itest test/test_gem
 
 rxtest
   Tim Bray's rx code.  Rx is an automaton based XML tokenizer.  It was
